syntax = "proto3";

package routeguide;

service RouteGuide {
  rpc GetLocation(Coordinate) returns (Location) {}
  rpc ListLocations(Area) returns (stream Location) {}
  rpc RecordRoute(stream Coordinate) returns (RouteSummary) {}
  rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
}

message Coordinate {
  int32 latitude = 1;
  int32 longitude = 2;
}

message Area {
  Coordinate lo = 1;
  Coordinate hi = 2;
}

message Location {
  string name = 1;

  Coordinate coordinates = 2;
}
message RouteNote {
  Coordinate location = 1;
  string message = 2;
}

message RouteSummary {
  int32 locations_count = 2;
  int32 distance = 3;
  int32 elapsed_time = 4;
}
